log
Tue, Apr 15, 2025 12:29:34 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:15: error: unused variable 'map' [-Werror=unused-variable]
     HashMap * map = (HashMap *)malloc(sizeof(HashMap));
               ^~~
cc1.exe: all warnings being treated as errors
eeef3b7
Tue, Apr 15, 2025 12:31:59 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bec3925
